--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -6,7 +6,7 @@
 }
 
 .nav-bar-title {
-  padding: .2rem .2rem;
+  padding: .2rem .65rem;
   border: 0.0625rem solid #D1D9E6;
   border-radius: 0.55rem;
   box-shadow: 3px 3px 6px #b8b9be, -3px -3px 6px #ffffff;
@@ -24,9 +24,28 @@ a.sidebar-link-item.active {
   box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #FFFFFF;
 }
 
+.sidebar-links .sidebar-links .sidebar-links a.sidebar-link-item.active {
+  padding: 0.4rem 1.5rem 0.4rem .6rem !important;
+  margin: 0 1.4rem 0 2.4rem;
+  border-color: var(--c-brand-light);
+}
+
 a.item.isExternal {
   padding: .2rem .6rem;
   border-width: .2rem;
   border-radius: 0.55rem;
   box-shadow: 3px 3px 6px #b8b9be, -3px -3px 6px #ffffff;
+}
+
+table {
+  border-radius: 0.55rem;
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #FFFFFF;
+}
+
+table tr:nth-child(2n) {
+  background-color: rgba(38, 40, 51, 0.04);
+}
+
+th, td {
+  border: 1px solid #D1D9E6;
 }
