fix: style conflict between vitepress and unreal-ui

--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -6,8 +6,16 @@
   --header-height: 4.8rem;
 }
 
+table {
+  display: table;
+}
+
 .container {
   max-width: 83rem !important;
+}
+
+.sidebar-button {
+  top: initial;
 }
 
 .nav-bar-title {
@@ -58,4 +66,12 @@ table tr:nth-child(2n) {
 
 th, td {
   border: 1px solid #D1D9E6;
+}
+
+.title {
+  font-size: 1.5rem;
+  margin: 0.8rem 0;
+}
+.space {
+  margin: 0 0.5rem;
 }
